<resources>
    <string name="app_name">SafeGuardPro</string>
    <string name="cadastro">Cadastro</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="regras">Regras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>