<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.MainActivity">


    <EditText
        android:id="@+id/telefonetxt"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@color/cardview_light_background"
        android:text="@string/telefone"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nometxt" />

    <EditText
        android:id="@+id/confirmasenhatxt"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@color/cardview_light_background"
        android:radius="25dp"
        android:text="@string/confirmar_senha"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhatxt" />

    <EditText
        android:id="@+id/senhatxt"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@color/cardview_light_background"
        android:radius="25dp"
        android:text="@string/senha"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textColor="#FFEB3B"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <EditText
        android:id="@+id/nometxt"
        android:layout_width="369dp"
        android:layout_height="50dp"
        app:circularflow_radiusInDP=""
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@color/cardview_light_background"
        android:text="@string/nome"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@color/cardview_light_background"
        android:radius="25dp"
        android:text="@string/email"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonetxt" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"

            android:layout_width="411dp"
            android:layout_height="110dp"
            android:background="@color/white"
            android:backgroundTint="#FFC107"
            android:minHeight="?attr/actionBarSize"
            tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="89dp"
        app:srcCompat="@drawable/safe_guard_pro_1_removebg_preview_3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icone"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notificao"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="36dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/seta"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="51dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cadastrobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmasenhatxt"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>